--- a/implementations/rust/ockam/ockam_node/Cargo.toml
+++ b/implementations/rust/ockam/ockam_node/Cargo.toml
@@ -11,3 +11,5 @@ async-trait = "0.1.42"
 hashbrown = "0.9.1"
 ockam_core = {path = "../ockam_core", version = "0.2.0"}
 tokio = {version = "1.1.0", features = ["full"]}
+serde = {version = "1.0", features = ["derive"]}
+serde_traitobject = "0.2.7"
