--- a/implementations/rust/ockam/ockam_transport_tcp/Cargo.toml
+++ b/implementations/rust/ockam/ockam_transport_tcp/Cargo.toml
@@ -25,6 +25,9 @@ std = []
 [dependencies]
 ockam_core = {path = "../ockam_core", version = "*"}
 ockam_router = {path = "../ockam_router", version = "*"}
+ockam_key_exchange_xx = {path = "../ockam_key_exchange_xx", version = "*"}
+ockam_key_exchange_core = {path = "../ockam_key_exchange_core", version = "*"}
+ockam_vault_core = { version = "0.2.0", path = "../ockam_vault_core" }
 serde_bare = "0.3.0"
 serde = {version = "1.0.120", features = ["derive"]}
 tokio = {version = "1.1.0", features = ["rt-multi-thread","sync","net","macros","time"]}
@@ -34,3 +37,4 @@ rand = "0.7"
 
 [dev-dependencies]
 trybuild = {version = "1.0.38", features = ["diff"]}
+ockam_vault = { version = "0.2.0", path = "../ockam_vault" }
