--- a/implementations/rust/ockam/ockam_router/Cargo.toml
+++ b/implementations/rust/ockam/ockam_router/Cargo.toml
@@ -12,6 +12,7 @@ default = ["std"]
 std = []
 
 [dependencies]
+ockam = {path = "../../ockam/ockam", version = "*"}
 serde_bare = "0.3.0"
 serde = {version = "1.0.120", features = ["derive"]}
 serde_json = "1.0.61"
@@ -20,3 +21,4 @@ url = "2.2.0"
 hex = "0.4.2"
 ockam_core = {path = "../ockam_core", version = "*"}
 hashbrown = "0.9.1"
+async-trait = "0.1.42"
