--- a/implementations/rust/ockam/ockam_transport_tcp/Cargo.toml
+++ b/implementations/rust/ockam/ockam_transport_tcp/Cargo.toml
@@ -23,7 +23,7 @@ default = ["std"]
 std = []
 
 [dependencies]
-ockam_core = {path = "../ockam_core", version = "*"}
+ockam = {path = "../ockam", version = "*"}
 ockam_router = {path = "../ockam_router", version = "*"}
 ockam_transport = {path = "../ockam_transport", version = "*"}
 ockam_key_exchange_xx = {path = "../ockam_key_exchange_xx", version = "*"}
