--- a/implementations/rust/ockam/ockam_router/Cargo.toml
+++ b/implementations/rust/ockam/ockam_router/Cargo.toml
@@ -13,6 +13,7 @@ std = []
 
 [dependencies]
 ockam = {path = "../../ockam/ockam", version = "*"}
+ockam_node = {path = "../../ockam/ockam_node", version = "*"}
 serde_bare = "0.3.0"
 serde = {version = "1.0.120", features = ["derive"]}
 serde_json = "1.0.61"
