fix(cmake): produce a shared library for libockam_elixir_ffi

--- a/implementations/elixir/build.gradle
+++ b/implementations/elixir/build.gradle
@@ -58,6 +58,6 @@ tasks.whenTaskAdded { task ->
   def isCleanTask = task.name.contains('clean') || task.name.contains('veryClean')
   if(!isCleanTask) {
     task.dependsOn(gradle.includedBuild('rust').task(':build_ockam_ockam_ffi'))
-    task.dependsOn(gradle.includedBuild('rust').task(':build_ockam_ockam_vault'))
+    // task.dependsOn(gradle.includedBuild('rust').task(':build_ockam_ockam_vault'))
   }
 }
