fix(rust): have elixir use release build for ockam_ffi

--- a/implementations/rust/build.gradle
+++ b/implementations/rust/build.gradle
@@ -23,6 +23,10 @@ commands {
       'cargo --locked build',
       'cargo --locked build --examples'
     ],
+    buildRelease: [
+      'cargo --locked build --release',
+      'cargo --locked build --release --examples'
+    ],
     test: 'cargo --locked test',
     clean: 'cargo clean',
     lint: [
