--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -4,6 +4,7 @@ permissions:
   contents: read
 
 on:
+  push:
   workflow_dispatch:
     inputs:
       commit_sha:
@@ -26,10 +27,8 @@ jobs:
       - name: Default Toolchain To Nightly
         run: rustup default nightly
       - name: Run Cargo Check
-        run: cd implementations/rust && ../../gradlew lint_cargo_fmt_check
+        run: RUSTFLAGS='-Dwarnings' cargo check
       - name: Run Cargo Build
         run: cd implementations/rust && ../../gradlew build
       - name: Run Cargo Test
         run: cd implementations/rust && ../../gradlew test
-      - name: Run Cargo Clippy
-        run: cd implementations/rust && ../../gradlew lint_cargo_clippy
